cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_C_COMPILER_WORKS 1)
SET (CMAKE_CXX_COMPILER_WORKS 1)

project(Day02)
file(GLOB_RECURSE SRC_FILES "src/*.cpp")
file(COPY  ${CMAKE_CURRENT_SOURCE_DIR}/puzzle.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(Day02 ${SRC_FILES})
target_include_directories(Day02 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
